# LustreVerilog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LustreVerilog.cabal  Makefile  README.md  TODO.md  cabal.project
.github/workflows/: haskell.yml
app/: ExportTyped.hs  Main.hs
doc/: typing.tex
slides/: slides.tex
src/: LustreVerilog.hs
src/Commons/: Ast.hs  AstTypes.hs  BiList.hs  Error.hs  Ids.hs  Localized.hs  Position.hs  Size.hs  Tree.hs  Types.hs  TypingError.hs
src/Compiling/: Ast.hs  ToVerilog.hs  Transform.hs
src/Normalisation/: Ast.hs  Normalise.hs
src/Parsing/: Ast.hs  Commons.hs  Grammar.y  LexAction.hs  Lexer.x  Parser.hs  ParsingMonad.hs  ParsingUtils.hs  RevList.hs
src/Solver/: BranchAndBound.hs  Data.hs  Gauss.hs  Interface.hs  Matrix.hs  Tableau.hs  VectorSpace.hs
src/Typing/: Ast.hs  AtomicUnifier.hs  CheckAtomicExpr.hs  Environments.hs  ExprEnv.hs  Ids.hs  Intervals.hs  MonadUnif.hs  NodeEnv.hs  NodeVarEnv.hs  SizeEnv.hs  TypeChecker.hs  TypeError.hs  TypeExpr.hs  TypeNode.hs  TypeUnification.hs  Unification.hs
src/Verilog/: Ast.hs  BaseLibrary.hs  Verilog.hs
stdlib/: lustre_add.v  lustre_and.v  lustre_concat.v  lustre_eq.v  lustre_fby.v  lustre_if.v  lustre_neg.v  lustre_not.v  lustre_or.v  lustre_select.v  lustre_signed_lt.v  lustre_slice.v  lustre_sub.v  lustre_unsigned_lt.v
stdlib/internal/: lustre_adder.v  lustre_bit_adder.v
test/: test1.lus
test/add/: main.lus  top.cpp
test/and/: main.lus  top.cpp
test/concat/: main.lus  top.cpp
test/custom/: main.lus
test/eq/: main.lus  top.cpp
test/fby/: main.lus  top.cpp
test/fulladder/: main.lus  top.cpp
test/if/: main.lus  top.cpp
test/multiply/: main.lus  top.cpp
test/multiplyN/: main.lus  top.cpp
test/neg/: main.lus  top.cpp
test/not/: main.lus  top.cpp
test/or/: main.lus  top.cpp
test/popcount/: main.lus  top.cpp
test/reverse/: main.lus  top.cpp
test/scmp/: main.lus  top.cpp
test/select/: main.lus  top.cpp
test/slice/: main.lus  top.cpp
test/slides-ex1/: main.v  top.cpp
test/slides-ex2/: main.v  top.cpp
test/slides-ex3/: main.lus  top.cpp
test/sub/: main.lus  top.cpp
test/test-files/: test1.lus
test/ucmp/: main.lus  top.cpp
test/unit/Parsing/: ParserSpec.hs
test/verilog-playground/: main.v  top.cpp
test/xorN/: main.lus  top.cpp
verilog-test/: Makefile  test.v  top.cpp  top.v
