cabal-version:      3.0
name:               LustreVerilog

version:            0.1.0.0

synopsis:           A Lustre to Verilog Compiler
description:        This package contains a Lustre to Verilog compiler.

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Gabriel Desfrene
maintainer:         gabriel@desfrene.fr

-- A copyright notice.
-- copyright:
category:           System
build-type:         Simple

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/desfreng/LustreVerilog/

common warnings
    ghc-options: -Wall -Wextra

library
    import:           warnings
    exposed-modules:
        LustreVerilog

    -- Modules included in this library but not exported.
    other-modules:
        Commons.Ast,
        Commons.BiList,
        Commons.Localized,
        Commons.Tree,
        Commons.Types,
        Commons.TypingError,
        Normalisation.Ast,
        Normalisation.Normalise,
        Parsing.Ast,
        Parsing.Parser,
        Typing.Ast,
        Typing.AtomicUnifier,
        Typing.Environments,
        Typing.MonadUnif,
        Typing.TypeChecker,
        Typing.Unification

    other-extensions: Safe

    build-depends:
        base >= 4.18 && < 5,
        bytestring >= 0.12.1 && < 0.13,
        containers >= 0.7 && < 0.8,
        megaparsec >= 9.7.0 && < 9.8,
        mtl >= 2.3.1 && < 2.4,
        text >= 2.1.1 && < 2.2,
        parser-combinators >= 1.3.0 && < 1.4

    hs-source-dirs:   src
    default-language: Haskell2010

executable LustreVerilog
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: Safe

    build-depends:
        base >= 4.18 && < 5,
        bytestring >= 0.12.1 && < 0.13,
        text >= 2.1.1 && < 2.2,
        optparse-applicative >= 0.18.1 && < 0.19,
        pretty-simple >= 4.1.3 && < 4.2,
        LustreVerilog

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite IntegTest
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: Safe

    build-depends:
        base >= 4.18 && < 5,
        directory >= 1.3

    hs-source-dirs:   test/integ
    default-language: Haskell2010
    build-tool-depends: LustreVerilog:LustreVerilog