cabal-version:      3.0
name:               LustreVerilog

version:            0.1.0.0

synopsis:           A Lustre to Verilog Compiler
description:        This package contains a Lustre to Verilog compiler.

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Gabriel Desfrene
maintainer:         gabriel@desfrene.fr

category:           System
build-type:         Simple

extra-doc-files:
    README.md

-- STDLib
data-dir:           stdlib
data-files:         *.v

source-repository head
  type:     git
  location: https://github.com/desfreng/LustreVerilog/

common warnings
    ghc-options: -Wall -Wextra

library
    import:           warnings
    exposed-modules:
        LustreVerilog

    -- Modules included in this library but not exported.
    other-modules:
        Commons.Ast,
        Commons.BiList,
        Commons.Ids,
        Commons.Position,
        Commons.Tree,
        Commons.Types,
        Commons.TypingError,
        Compiling.Ast,
        Compiling.ToVerilog,
        Compiling.Transform,
        Parsing.Ast,
        Parsing.Parser,
        Typing.Ast,
        Typing.CheckAtomicExpr,
        Typing.Environments,
        Typing.ExprEnv,
        Typing.MonadUnif,
        Typing.NodeEnv,
        Typing.NodeVarEnv,
        Typing.TypeExpr,
        Typing.TypeNode,
        Typing.TypeUnification,
        Verilog.Ast,
        Verilog.BaseLibrary,
        Verilog.Verilog

    default-extensions: Safe

    build-depends:
        base >= 4.18 && < 5,
        bytestring >= 0.12.1 && < 0.13,
        containers >= 0.7 && < 0.8,
        megaparsec >= 9.7.0 && < 9.8,
        mtl >= 2.3.1 && < 2.4,
        text >= 2.1.1 && < 2.2,
        parser-combinators >= 1.3.0 && < 1.4,
        prettyprinter >= 1.7.1 && < 1.8,

    hs-source-dirs:   src
    default-language: Haskell2010

executable LustreVerilog
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Paths_LustreVerilog

    autogen-modules:
        Paths_LustreVerilog

    default-extensions: Safe

    build-depends:
        base >= 4.18 && < 5,
        bytestring >= 0.12.1 && < 0.13,
        text >= 2.1.1 && < 2.2,
        optparse-applicative >= 0.18.1 && < 0.19,
        pretty-simple >= 4.1.3 && < 4.2,
        LustreVerilog

    hs-source-dirs:   app
    default-language: Haskell2010
