cabal-version:      3.0
name:               LustreVerilog

version:            0.1.0.0

synopsis:           A Lustre to Verilog Compiler
description:        This package contains a Lustre to Verilog compiler.

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Gabriel Desfrene
maintainer:         gabriel@desfrene.fr

category:           System
build-type:         Simple

extra-doc-files:
    README.md

-- STDLib
data-dir:           stdlib
data-files:         *.v

common warnings
    ghc-options: -Wall -Wextra

library
    import:           warnings
    exposed-modules:
        LustreVerilog

    -- Modules included in this library but not exported.
    other-modules:
        Commons.Ast,
        Commons.BiList,
        Commons.Ids,
        Commons.Position,
        Commons.Tree,
        Commons.Size,
        Commons.Types,
        Commons.Error,
        Compiling.Ast,
        Compiling.ToVerilog,
        Compiling.Transform,
        Parsing.Ast,
        Parsing.LexAction,
        Parsing.Commons,
        Parsing.ParsingMonad,
        Parsing.Lexer,
        Parsing.ParsingUtils,
        Parsing.RevList,
        Parsing.Grammar,
        Typing.Ast,
        Typing.CheckAtomicExpr,
        Typing.Environments,
        Typing.ExprEnv,
        Typing.MonadUnif,
        Typing.NodeEnv,
        Typing.NodeVarEnv,
        Typing.SizeEnv,
        Typing.TypeExpr,
        Typing.TypeNode,
        Typing.TypeUnification,
        Typing.Intervals,
        Verilog.Ast,
        Verilog.BaseLibrary,
        Verilog.Verilog,
        Solver.Data,
        Solver.Matrix,
        Solver.Tableau,
        Solver.Interface,
        Solver.BranchAndBound,
        Solver.Gauss,
        Solver.VectorSpace

    build-depends:
        base >= 4.20 && < 5,
        array,
        bytestring,
        containers,
        mtl,
        text,
        prettyprinter,
        pretty-simple,
        ratio-int,
        vector,
        
    build-tool-depends:
        alex:alex,
        happy:happy

    hs-source-dirs:   src
    default-language: Haskell2010

executable LustreVerilog
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Paths_LustreVerilog

    autogen-modules:
        Paths_LustreVerilog

    build-depends:
        base,
        bytestring,
        text,
        optparse-applicative,
        pretty-simple,
        LustreVerilog

    hs-source-dirs:   app
    default-language: Haskell2010
